<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.FAQsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/txtQ1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Ques_1"
                android:textColor="@color/question_color"
                android:textSize="18sp"
                android:padding="5dp"/>


            <TextView
                android:id="@+id/txtA1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Ans_1"
                android:textColor="@color/answer_color"
                android:textSize="18sp" />


        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
           >

            <TextView
                android:id="@+id/txtQ2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Ques_2"
                android:textColor="@color/question_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtA2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Ans_2"
                android:textColor="@color/answer_color"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
           >

            <TextView
                android:id="@+id/txtQ3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Ques_3"
                android:textColor="@color/question_color"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtA3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Ans_3"
                android:textColor="@color/answer_color"
                android:textSize="18sp" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/txtQ4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Ques_4"
                android:textColor="@color/question_color"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/txtA4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Ans_4"
                android:textColor="@color/answer_color"
                android:textSize="18sp" />

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="#000000" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="vertical"
            >

            <TextView
                android:id="@+id/txtQ5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Ques_5"
                android:textColor="@color/question_color"
                android:textSize="18sp" />


            <TextView
                android:id="@+id/txtA5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:text="@string/Ans_5"
                android:textColor="@color/answer_color"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>